[build-system]
requires = ["setuptools", "wheel==0.30.0", "versioneer-518"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist=pep8,py36,py37,py38
skip_missing_interpreters=true
requires = versioneer-518

[testenv]
setenv=VIRTUAL_ENV={envdir}
deps=
    flake8
    pytest

[testenv:py36]
commands=pytest

[testenv:py37]
commands=pytest

[testenv:py38]
commands=pytest

[testenv:pep8]
commands=flake8

[flake8]
commands=flake8 src
"""
